Adding tooltips and fixing typo

--- a/ui/app/src/locales/bg.json
+++ b/ui/app/src/locales/bg.json
@@ -7,7 +7,7 @@
   "forms.accountNamePlaceholder" : "Лична Сметка",
   "forms.accountNumber" : "Номер на сметка",
   "forms.currency" : "Валута",
-  "forms.manditoryFields" : "Задължителни Полета",
+  "forms.mandatoryFields" : "Задължителни Полета",
   "forms.optionalFields" : "Опционални Полета",
   "forms.openingBalance" : "Начален Баланс",
   "forms.openingBalanceDate" : "Дата на Начален Баланс",
